2004-07-12 23:08 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormImageEditor.m: [GormImageEditor initWithObject:inDocument:]
	added call to [GormPalettesManager importedImages] to return
	the images imported by any custom palettes.
	* GormSoundEditor.m: [GormSoundEditor initWithObject:inDocument:]
	added call to [GormPalettesManager importedSounds] to return
	the sounds imported by any custom palettes.
	* GormPalettesManager.m: Changed the return of 
	[GormPalettesManager importClasses:withDictionary:], added
	[GormPalettesManager importImages:withBundle:],
	[GormPalettesManager importSounds:withBundle:],
	[GormPalettesManager importedImages], and
	[GormPalettesManager importedImages].  These methods are
	used to get the images and sounds from a palette so that
	they can be used from Gorm by the user.
	* GormPalettesManager.h: Added banner.
	
	
2004-07-11 23:40 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormDocument.m: saveGormDocument.m: Changes to prevent a
	new gorm from being saved twice.  This was an innocuous problem
	as it would simply overwrite the same .gorm with itself.
	Added code to set isOlderArchive in loadDocument: method.
	Added code to call [GormFilePrefsManager setClassVersions] and 
	[GormFilePrefsManager restoreClassVersions] in beginArchiving and 
	endArchiving respectively to set and reset the versions of classes
	which need to be used for each .gorm file version to be saved.
	Updated changeView: method to switch to the filePrefsView when clicking
	on the button.
	Added code to the toolbar delegate to add the "File" button to the 
	document toolbar.
	Added code to loadDocument to load the data.info file if it's 
	present, if not
	we simply use the defaults.
	* GormDocument.h: Added new ivars for isOlderArchive, filePrefsView,
	and filePrefsManager.
	* GormFilePrefsManager.[hm]: New files.
	* GormPalettesPref.[hm]: New files.
	* GormPrefsPalette.gorm: new interface for palette loading.