@@ -82,7 +82,8 @@
             "performMiniaturize:", 
             "performZoom:", 
             "print:", 
-            "raiseBaseline:", 
+            "raiseBaseline:",
+            "redo:", 
             "revertDocumentToSaved:", 
             "runPageLayout:", 
             "runToolbarCustomizationPalette:", 
@@ -128,6 +129,7 @@
             "turnOffKerning:", 
             "turnOffLigatures:", 
             "underline:", 
+            "undo:",
             "unhide:", 
             "unhideAllApplications:", 
             "unscript:", 
